# routes/main.routes.js
@@ -6,6 +6,7 @@ const categoryRoutes = require("./category.routes");
 const productRoutes = require("./product.routes");
 const subCategoryRoutes = require("./subCategory.routes");
 const offerRoutes = require("./offer.routes");
+const sliderRoutes = require("./slider.routes");
 
 const mountRoutes = (app) => {
   // Mount routes
@@ -13,6 +14,7 @@ const mountRoutes = (app) => {
   app.use("/api/products", productRoutes);
   app.use("/api/subcategories", subCategoryRoutes);
   app.use("/api/offers", offerRoutes);
+  app.use("/api/sliders", sliderRoutes);
 
   // Health check route
   app.get("/api/health", async (req, res) => {
